gix bug with gap

--- a/style/promo/__content/promo__content.css
+++ b/style/promo/__content/promo__content.css
@@ -2,6 +2,7 @@
   margin: 60px 0;
   display: grid;
   grid-template-columns: 2fr 1fr;
+  gap: 20px;
 }
 
 
